--- a/front/src/App.css
+++ b/front/src/App.css
@@ -6,8 +6,11 @@ h1 {
   color: #f38181;
 }
 h1.header{
-  font-size: 100px;
+  font-size: 40px;
   text-align: center;
+}
+h1{
+  margin: 0;
 }
 .App {
   display: flex;
@@ -16,7 +19,7 @@ h1.header{
 }
 
 .sidebar {
-  padding: 20px;
+  padding: 0 20px;
 }
 
 .debug {
