--- a/front/src/App.css
+++ b/front/src/App.css
@@ -4,7 +4,7 @@ body{
 }
 
 h1 {
-  color: #654062;
+  color: #7b5ab9;
 }
 h1.header{
   font-size: 40px;
@@ -18,7 +18,7 @@ h1{
   flex:1;
   text-align:center;
   font-size: 30px;
-  color:#654062;
+  color:#7b5ab9;
   font-weight: bolder;
 }
 
