--- a/front/src/App.css
+++ b/front/src/App.css
@@ -21,7 +21,17 @@ h1{
   color:#7b5ab9;
   font-weight: bolder;
 }
+.cell {
+  height:42px;
+  width:42px;
+  border:2px solid #65d6ce;
+  border-radius: 15px;
+}
 
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr ;
+}
 .button {
   font-weight: bold;
   flex: 1;
