--- a/front/src/App.css
+++ b/front/src/App.css
@@ -1,5 +1,5 @@
 body{
-  background-color: #eaffd0;
+  background-color: #7eb6a9;
 }
 
 h1 {
@@ -7,6 +7,7 @@ h1 {
 }
 h1.header{
   font-size: 60px;
+  margin-bottom:40px;
   text-align: center;
 }
 h1{
@@ -21,8 +22,8 @@ h1{
   font-weight: bolder;
 }
 .cell {
-  height:60px;
-  width:60px;
+  height:20px;
+  width:20px;
   animation: morphing 10s infinite;
   margin: 3px;
   border-radius: 30% 70% 70% 30%/30% 30% 70% 70%
@@ -49,26 +50,34 @@ h1{
 .grid {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  padding: 4px;
+  background-color: #0002;
+  border-radius: 8px;
 }
 .button {
+  width: 100%;
   font-weight: bold;
-  flex: 1;
   padding: 10px 20px;
-  background-color: #95e1d3;
+  background-color: #f16b6b;
   display: block;
   text-align: center;
-  color: #7b5ab9;
+  color: #5C4B51;
   border-radius: 5px;
   cursor: pointer;
-  border: 1px solid #7b5ab9;
+  border: 1px solid #f06060;
   border-bottom-width: 6px;
 }
 .button.disabled {
-  cursor: arrow;
+  cursor:default;
   background-color:gray;
   color:black;
   opacity: 0.5;
 }
+
+.button:hover{
+  opacity:0.8;
+}
+.button.disabled:hover{opacity:0.5}
 .mtop {
   margin-top: 20px;
 }
@@ -76,9 +85,15 @@ h1{
 .App {
   z-index: 20;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content:center;
   position:relative;
+  background-color: #F3B562;
+  padding: 40px;
+  width: 430px;
+  border-radius:50px;
+  border: 4px solid #f0a138;
+  border-bottom-width: 20px;
 }
 
 .AppWrapper{
@@ -87,11 +102,14 @@ h1{
     flex-direction: column;
     justify-content:center;
     position:relative;
+    align-items:center;
   }
 
 .sidebar {
   padding: 0 20px;
+  padding-right: 0px;
 }
+
 
 .debug {
   font-family: monospace;
@@ -100,18 +118,30 @@ h1{
 }
 
 .simulator {
+  margin-top:20px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  background-color:#0002;
+  border-radius:8px;
+  align-items:center;
+  padding:8px;
 }
-
+.simulator .button{
+  width: auto;
+}
+.leaderboard{
+  margin-top:30px;
+}
 .addressWrapper {
   display: flex;
   align-items: center;
 }
 .cappedAddress {
-  max-width: 130px;
-  color: gray;
+  color: white;
+  font-family:monospace;
+  font-size:20px;
+  margin-right:10px;
   display:inline-block;
   white-space: nowrap;
   overflow: hidden;
@@ -122,22 +152,23 @@ h1{
   padding: 4px 8px;
   border-radius: 5px;
   color: white;
-  background-color: #52B987;
+  background-color: #5C4B51;
 }
 
 .bar {
   height: 20px;
+  border-radius: 8px;
   width: 100%;
   margin-bottom: 20px;
-  background-color: gainsboro;
+  background-color: #98818999;
   transition: width 1s ease-in;
+  overflow:hidden;
 }
 
 .barProgress {
   height: 100%;
-  
   width: 0%;
-  background-color:#7b5ab9;
+  background-color:#5C4B51;
   transition: width 30s ease-in;
 }
 
