--- a/front/src/App.css
+++ b/front/src/App.css
@@ -94,6 +94,70 @@ h1{
   border-radius:50px;
   border: 4px solid #f0a138;
   border-bottom-width: 20px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+
+.tabs {
+  width: 430px;
+  display:flex;
+  z-index:21;
+  position:relative;
+  flex-direction:row;
+  justify-content:flex-end;
+}
+.tab{
+  border-radius:50px;
+  padding:20px 50px;
+  background-color: #e7bb81;
+  color:  #654062;
+  border: 4px solid #f0a138;
+  margin-bottom:-4px;
+  align-items:center;
+  display:flex;
+  font-size:25px;
+  font-weight: bolder;
+  cursor:pointer;
+  
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+.tab.active{
+  background-color: #F3B562;
+  border-bottom-width:0;
+}
+
+.cardholder{
+  display:flex;
+  flex-direction:row;
+}
+
+.card{
+  padding:20px;
+  margin: 20px;
+  border-radius:20px;
+  background-color:#ee9723;
+  flex:1;
+}
+.card span{
+  font-size:40px;
+  font-weight:bolder;
+  color: #eee;
+}
+
+.lorem{
+  background:#2221;
+  padding:12px 20px;
+  border-radius:8px;
+}
+.card .button{
+  width:auto;
+  margin-top:20px;
+}
+.card .button span{
+  color:#5C4B51;
+  font-weight:bold;
+  font-size:18px;
 }
 
 .AppWrapper{
@@ -147,6 +211,12 @@ h1{
   overflow: hidden;
   text-overflow: ellipsis;
 }
+
+.cappedAddress{
+  font-size:14px;
+  color: #333;
+}
+
 
 .score {
   padding: 4px 8px;
